# weird-app

./: Cargo.toml  README.md
auth-service/: .env  Cargo.toml  Dockerfile  docker-compose.yml  local-deploy.sh  local-kill-deps.sh  local-run-deps.sh
auth-service/config/: dev.yaml
auth-service/src/: error.rs  lib.rs  main.rs  server.rs
auth-service/src/config/: mod.rs  mongo_config.rs
auth-service/src/models/: Account.rs  account.rs  link_details.rs  mod.rs  system_preference.rs  user_details.rs  user_links.rs
auth-service/src/models/enums/: lang.rs  link_type.rs  mod.rs  theme.rs
auth-service/src/repository/: account_repo.rs  mod.rs  user_repo.rs
auth-service/tests/models/: account.rs
